fix: visibility dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,10 @@ nav ul a{
     text-decoration:none;
     color:white
 }
-nav ul li a{
+#moderator ul li a{
     color: white;
 }
-nav ul li a:visited{
+#moderator ul li a:visited{
     color: white;
 }
 .dropbtn svg{
